WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
274021
Crash in transparent document markers when collecting.
https://bugs.webkit.org/show_bug.cgi?id=274021
Summary
Crash in transparent document markers when collecting.
Megan Gardner
Reported
2024-05-10 15:28:00 PDT
Crash in transparent document markers when collecting.
Attachments
Add attachment
proposed patch, testcase, etc.
Megan Gardner
Comment 1
2024-05-10 15:28:12 PDT
<
rdar://problem/127898121
>
Megan Gardner
Comment 2
2024-05-10 15:32:14 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/28413
EWS
Comment 3
2024-05-10 23:19:51 PDT
Committed
278649@main
(42b0cd59678a): <
https://commits.webkit.org/278649@main
> Reviewed commits have been landed. Closing PR #28413 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug