Crash in transparent document markers when collecting. https://bugs.webkit.org/show_bug.cgi?id=274021 rdar://127898121

Reviewed by Wenson Hsieh.

Was incorrectly casting the data for a transparent
document marker. Add the additional element data
to a transparent document maker to make it function
correctly and also not crash.

* Source/WebCore/dom/DocumentMarker.h:
* Source/WebCore/dom/DocumentMarkerController.cpp:
(WebCore::DocumentMarkerController::addTransparentContentMarker):
(WebCore::shouldInsertAsSeparateMarker):
* Source/WebCore/dom/DocumentMarkerController.h:
* Source/WebCore/rendering/RenderReplaced.cpp:
(WebCore::contentContainsReplacedElement):
* Source/WebKit/WebProcess/WebPage/Cocoa/WebPageCocoa.mm:
(WebKit::WebPage::updateTextIndicatorStyleVisibilityForID):

Canonical link: https://commits.webkit.org/278649@main